[gd_scene load_steps=9 format=3 uid="uid://bnor4ia1ehkro"]

[ext_resource type="Script" path="res://spear.gd" id="1_7hudb"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_skqh7"]
albedo_color = Color(0.615686, 0.384314, 0.207843, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_kg3bm"]
material = SubResource("ORMMaterial3D_skqh7")
top_radius = 0.025
bottom_radius = 0.025

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_6cv5o"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_t1s2p"]
albedo_color = Color(0.823529, 0, 0.192157, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7en6d"]
material = SubResource("ORMMaterial3D_t1s2p")
top_radius = 0.001
bottom_radius = 0.1
height = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6qkad"]
radius = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0k5eq"]
radius = 0.25

[node name="RigidBody3D" type="RigidBody3D"]
visible = false
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_7hudb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 2.25056, 0, 0)
mesh = SubResource("CylinderMesh_kg3bm")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 3.33239, 0, -1.01672e-09)
material_override = SubResource("ORMMaterial3D_6cv5o")
mesh = SubResource("CylinderMesh_7en6d")
skeleton = NodePath("../MeshInstance3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2.26757, 0, 0)
shape = SubResource("CylinderShape3D_6qkad")

[node name="spearea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.74843, 0, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="spearea"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.480848, 0, 0)
shape = SubResource("CylinderShape3D_0k5eq")

[node name="spearea2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.74843, 0, 0)
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="spearea2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.480848, 0, 0)
shape = SubResource("CylinderShape3D_0k5eq")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15554, 0, 0)

[connection signal="visibility_changed" from="." to="." method="_on_visible"]
[connection signal="body_entered" from="spearea" to="." method="_on_spearea_body_entered"]
[connection signal="body_entered" from="spearea2" to="." method="_on_spearea_2_body_entered"]
